# 31536000SecondsChallange

./: .gitignore  README.md
calcualteTomorrow/calcualteTomorrow/: main.c
calcualteTomorrow/calcualteTomorrow.xcodeproj/: project.pbxproj
dartmouth_c_lang/: .clang-format  course-v1.1.c  course-v1.c  unit1.2.c
dartmouth_c_lang/unit 1.1/: unit1.1.c
dartmouth_c_lang/unit 1.2/: unit1.2.c  unit1.2.h
dartmouth_c_lang/unit 1.3/: unit1.3.c  unit1.3.h
dartmouth_c_lang/unit 2.1/: treeKnowledge.c  unit2.1.c  unit2.1.h
dartmouth_c_lang/unit 2.2/: unit2.2.c
dartmouth_c_lang/unit 2.3/: unit2.3.c
dartmouth_c_lang/unit 3.1/: unit3.1.c
dartmouth_c_lang/unit 3.2/: uni3.2.c  unit3.2.c
dartmouth_c_lang/unit 3.3/: unit3.3.c
dartmouth_c_lang/unit 4.1/: unit4.1.c
dartmouth_c_lang/unit 4.2/: unit4.2.c
dartmouth_c_lang/unit 4.3/: unit4.3.c
dartmouth_c_lang/unit 5.1/: unit5.1.c
dartmouth_c_lang/unit 5.3/: unit5.3.c
fastAPI/: body_fields.py  body_multiple_param.py  body_nested_model.py  context_manager_yield.py  cookies.py  dependencies_yield.py  dependency_injection.py  enums.py  extra_data_types.py  handling_errors.py  header_params.py  json_compatible_encoder.py  path_param_num_validation.py  request.py  request_files.py  requirements.txt  response_status_code.py  return_types.py  sub_dependencies.py  validation.py
khare-pashmaloo/: Cargo.toml
khare-pashmaloo/src/: main.rs
led_ws2812/: nrf52-bindings.h  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf
python_for_beginners/: names.csv  python-for-beginners.ipynb
(+57 files in other folders)
