[package]
name = "khare-pashmaloo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["cors"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
] }
jsonwebtoken = "8.2"
once_cell = "1.9"
